[package]
name = "cargo-cook"
version = "0.2.0"
authors = ["Victor Polevoy <fx@thefx.co>"]
readme = "README.md"
repository = "https://github.com/vityafx/cargo-cook"
homepage = "https://github.com/vityafx/cargo-cook"
license = "MIT/Apache-2.0"
description = "A third-party cargo extension which allows you to cook your crate"

[cook]
target_directory = "target/release"
target_rename = "cargocook"
hashes = ["md5", "sha256", "sha512"]
containers = ["tar", "tar.bzip2"]
pre_cook = "pre_cook.sh"
post_cook = "post_cook.sh"
include_dependencies = true
cook_directory = "cooked/"

[cook.deploy]
targets = ["fscopy", "ssh"]

[cook.deploy.fscopy]
path = "/tmp"

[cook.deploy.ssh]
hostname = ""                           # Host:port format.
username = ""
remote_path = ""                        # must be absolute path!
deploy_script = "ssh_deploy.sh"         # Will be executed on remote server.

# If source is a file then it will be copied to the destination.
# If the source is a directory then the destination field is also a directory and `filter` field can be used to determine which files to take.
[[cook.ingredient]]
source = "Cargo.toml"
destination = "Cargo.toml"

[[cook.ingredient]]
source = "src"
destination = "src"

[[cook.ingredient]]
source = "./"
filter = "(LICENSE-*)"
destination = "licenses/"

[[bin]]
name = "cargo-cook"

[dependencies]
clap = "2.23"
toml = "0.3"
serde = "0.9"
serde_derive = "0.9"
regex = "0.2"
tar = "0.4"
rust-crypto = "0.2"
term = "0.4"
lazy_static = "0.2"
rpassword = "0.4"
sysconf = "0.1.2"

[features]
default = ["compression", "deploy"]
compression = ["bzip2"]
deploy = ["ssh"]
ssh = ["ssh2"]

[dependencies.bzip2]
version = "0.3"
optional = true

[dependencies.ssh2]
version = "0.3"
optional = true
