[package]
name = "cargo-cook"
version = "0.4.1"
authors = ["Victor Polevoy <fx@thefx.co>"]
readme = "README.md"
repository = "https://github.com/vityafx/cargo-cook"
homepage = "https://github.com/vityafx/cargo-cook"
license = "MIT/Apache-2.0"
description = "A third-party cargo extension which allows you to cook your crate"

[[bin]]
name = "cargo-cook"

[dependencies]
clap = "2"
toml = "0.5"
serde = "1"
serde_derive = "1"
regex = "1"
tar = "0.4"
rust-crypto = "0.2"
term = "0.6"
lazy_static = "1"
rpassword = "4"
sysconf = "0.3"

[features]
default = ["compression", "deploy", "ssh"]
compression = ["bzip2"]
deploy = ["ssh"]
ssh = ["ssh2"]

[dependencies.bzip2]
version = "0.3"
optional = true

[dependencies.ssh2]
version = "0.8"
optional = true
